syntax = "proto3";

package shared;

message Vector2f {
    float x = 1;
    float y = 2;
}
